fixed spacing and changed about me title to be center

--- a/src/About.scss
+++ b/src/About.scss
@@ -5,6 +5,10 @@
       display: flex;
       flex-wrap: column;
       gap: 5rem;
+
+      @media (max-width: 900px) {
+        gap: 2rem;
+      }
     }
   
     .img-about {
@@ -67,8 +71,11 @@
       flex-direction: column;
       align-items: center;
     }
+
     .text-title {
       padding-top: 0;
+      border-right: 0;
+      text-align: center;
     }
 
     .img-about {
