--- a/src/titles.scss
+++ b/src/titles.scss
@@ -21,7 +21,7 @@
     text-align: center;
 
     @media (max-width: 900px) {
-      font-size: 5vw;
+      font-size: 6vw;
     }
   }
   
